--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>test</title>
-    <link rel="stylesheet" href="dist/css/main.css">
+    <link rel="stylesheet" href="dist/main.css">
 </head>
 <body>
     
     <div id="app"></div>
-    <script src="dist/js/out.js"></script>
+    <script src="dist/app.js"></script>
 </body>
 </html>
