--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
-    <link rel="stylesheet" href="dist/main.css">
+    <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
     
